--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,7 +8,7 @@ datasource.test.password=payaza
 
 
 # Live DB
-datasource.live.url=jdbc:postgresql://localhost:5432/fs78
+datasource.live.url=jdbc:postgresql://localhost:5432/fs78live
 datasource.live.username=postgres
 datasource.live.password=payaza
 
